--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#intro">INTRO</a></li>
+                <li><a href="#like">LIKE</a></li>
+            </ul>
+        </nav>
         <div class="container" id="home">
             안녕하세요, 이원준입니다.
         </div>
@@ -29,6 +36,11 @@
                 <div class="card_description">
                     T1은 리그오브레전드 구단이다.
                 </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="copyright">
+                Copyright 이원준
             </div>
         </div>
     </body>
